Bugzilla bug 228618: fixed an incorrect use of realloc.  Fixed an unused variable compiler warning.  r=jpierre.